--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "run": "node index.js",
-    "build":"npm install && npm start"
+    "build": "npm install && npm run lint && npm run test",
+    "lint": "eslint .",
+     "test": "mocha"
+
+
 
   },
   "keywords": [],
