--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "run": "node index.js",
-    "build": "npm install && npm run test",
-    "lint": "eslint .",
-     "test": "mocha"
-
-
-
+    "start": "nodemon index.js",
+    "run": "node index.js"
   },
   "keywords": [],
   "author": "",
