--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
-    "run": "node index.js"
-  },
+    "start": "nodemon index.js"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
