--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.85.0"
   },
   "scripts": {
     "start": "react-scripts start",
