comment added on JSON

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,3 +1,4 @@
+
 {
   "version": 2,
   "builds": [
@@ -11,5 +12,6 @@
       "src": "/(.*)",
       "dest": "/"
     }
-  ]
+  ],
+  "comment":"This file added just to make it feasible to be deployed into Vercel"
 }
