--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js"
-    },
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.2.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "nodemon": "^3.0.1"
   }
 }
